[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main/SetTeamUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/CascadiaCodePL-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="SetTeamUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderH" type="HBoxContainer" parent="V"]
margin_right = 1920.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseUIButton" type="Button" parent="V/HeaderH"]
margin_right = 152.0
margin_bottom = 147.0
theme = SubResource( 2 )
text = "<-"

[node name="SetTeamH" type="HBoxContainer" parent="V"]
margin_top = 151.0
margin_right = 1920.0
margin_bottom = 759.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamGrid" type="GridContainer" parent="V/SetTeamH"]
margin_right = 608.0
margin_bottom = 608.0
columns = 3

[node name="2" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="5" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="8" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="3" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="6" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 204.0
margin_top = 204.0
margin_right = 404.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="9" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 408.0
margin_top = 204.0
margin_right = 608.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="1" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_top = 408.0
margin_right = 200.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="4" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 204.0
margin_top = 408.0
margin_right = 404.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="7" type="ColorRect" parent="V/SetTeamH/TeamGrid"]
margin_left = 408.0
margin_top = 408.0
margin_right = 608.0
margin_bottom = 608.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="ChangeTeamH" type="HBoxContainer" parent="V"]
margin_top = 763.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="ScrollContainer" parent="V/ChangeTeamH"]
margin_right = 1920.0
margin_bottom = 317.0
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="V/ChangeTeamH/S"]

[connection signal="pressed" from="V/HeaderH/CloseUIButton" to="." method="_on_CloseUIButton_pressed"]
